Removed unnecessary changes (formatting)